Docs honesty pass: record the closed validation gate and catch the docs up to the code
ROADMAP: the friend test was cancelled permanently 2026-07-30 and no phase can
satisfy the old validation gate — phases proceed by per-phase owner decision.
Phase B is shipped (#118), Phase C is in review (#119), Phase D's styles.css and
dependency-major items are already done (#67, #92, #107), and Phase E is
approved to build (owner decision 2026-08-02).

HANDOFF: the four "open findings" majors are all resolved (localBridge has 33
tests, the stylesheet split landed as #67, frontend docs were fixed by #41);
the verified minors were re-verified against code 2026-08-02 and all but the
Looped/priority presentation gap (#121) are since fixed; skills-execution
merged as PR #1; CI has three jobs, not two; the "* 2.java" caution is
historical and removed.

Also recorded: JavaFX 26.0.2 desktop launch verified 2026-08-02 (the validation
issue #11's close comment demanded — window renders, demo data loads); friend
test status banners on FRIEND-TEST.md / FRIEND-INVITE.md; TIER3 precondition
rewording; README desktop stack says JavaFX 26; VISUAL-TECHNIQUE-PLAN type-scale
row marked done per the empty audit ratchet.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>